# mul

./: .gitignore  Makefile  pyproject.toml  readme.md
examples/: bank.mul  hello_world.mul  lists.mul
mul/: __init__.py  __main__.py  ast.py  lexer.py  lib.py  lookahead.py  parser.py  tokens.py
mul/interpretation/: __init__.py  activation_record.py  interpreter.py  print.py  symbol_table.py  visitor.py
std/: lib.mul  list.lang  logic.lang  operator.lang  pair.lang  str.lang  test.lang
